webext/assets/styles.css
@font-face {
  /* A special font that only has unicode full blocks in it, so we can detect */
  /* font colors and text visibility more easily. */
  font-family: 'BlockCharMono';
  src: url('/assets/BlockCharMono.ttf') format('truetype');
}

@font-face {
  font-family: 'BlankMono';
  src: url('/assets/BlankMono.ttf') format('truetype');
}

/* Force text into a reliable grid */
html * {
  font-size: 15px !important;
  line-height: 20px !important;
  letter-spacing: 0px !important;
  font-style: normal !important;
  font-weight: normal !important;
}

.browsh-hide-text,
.browsh-hide-text *,
html * {
  font-family: 'BlankMono' !important;
}

.browsh-show-text,
.browsh-show-text * {
  font-family: 'BlockCharMono' !important;
}

/* Simulate emphasis because terminals don't usually support bold, italic, etc */
b, em, strong {
  filter: brightness(10%);
}

sup, sub {
  vertical-align: baseline !important;
}

/* Prevents duplicated text caused by the rendering of the DOM's input box content
 * and the CLI app's input box content */
input, textarea {
  color: transparent !important;
}

